--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="width:100%;">
       
-      <div class="navbar-header" style="width:100%; ">
+      <div class="navbar-header" >
         <!--<div class="container" style="position:fixed; top=0; left:0; float:left">-->
         
           <img id="agrosocial_logo" src="/assets/logo_button.svg" alt="AgroSocial Logo" class="img-circle">
@@ -24,10 +24,10 @@
 
           
 
-          <div class="container" style="width:100%; float:right">
+          <!--<div class="container" style="width:100%; float:right">-->
 
-            <ul class="nav navbar-nav navbar-right" >
-            <li class="col-lg-6" style="width:300px; ">
+          <ul class="nav navbar-nav navbar-right" >
+            <li class="col-lg-6" style="height:50px; line-height:50px; ">
               <div class="input-group" style="resize:horizontal; float:right;">
                 <input type="text" class="form-control">
                 <span class="input-group-btn">
@@ -35,11 +35,12 @@
                 </span>
               </div>
             </li>
+            <li class="divider"></li>
 
-            <!--NOTIFICACOES-->
-          <ul class="nav navbar-nav navbar-right" >
+          <!--NOTIFICACOES-->
+          <!--<ul class="nav navbar-nav navbar-right">-->
             <li class="dropdown messages-dropdown" >
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell-o"></i><span class="badge" id="custom-badge">3</span> <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell-o"></i><span class="badge" id="custom-badge">3</span> <b class="caret"></b> </a>
               <ul class="dropdown-menu">
                 <li class="dropdown-header">3 New </li>
                 <li class="preview">
@@ -71,12 +72,11 @@
                 <li class="divider"></li>
                 <li><a href="#">Ver Mais <span class="badge">3</span></a></li>
               </ul>
-            </li>
-            <!--END NOTIFICACOES-->
+            </li> <!--END NOTIFICACOES-->
 
 
             <!-- MESSAGES -->
-            <ul class="nav navbar-nav navbar-right">
+            <!--<ul class="nav navbar-nav navbar-right">-->
               <li class="dropdown messages-dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope-o"></i><span class="badge" id="custom-badge">2</span> <b class="caret"></b></a>
                 <ul class="dropdown-menu">
@@ -123,9 +123,9 @@
               <!--END USER-->
           
 
+            <!--</ul>-->
             </ul>
-            </ul>
-            </div>
+            <!--</div>-->
 
             <!--
             <div class="col-lg-6" style="width:300px; float:right">
