--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,28 @@
-<h2>Forgot your password?</h2>
 
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
 
-  <div><%= f.submit "Send me reset password instructions" %></div>
-<% end %>
+<div class="container">
+	<div class="row">
+        <div class="span12">
+    		<div class="thumbnail center well well-small text-center">
+                <h2>Esqueceu a sua password</h2>
+                
+                <p>Escreva o seu email e siga as intrucões.</p>
 
-<%= render "devise/shared/links" %>
+                <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post}) do |f| %>
+					  <%= devise_error_messages! %>
+
+                      <div class="input-prepend"><span class="add-on"><i class="icon-envelope"></i></span>
+                        <%= f.label :email %><br />
+					      <%= f.email_field :email, :autofocus => true , :placeholder=>"Escreva aqui o seu email"%>
+                       </div>
+
+					  <div class="btn btn-large"><%= f.submit "Envia e recupera a tua password" %></div>
+					<% end %>
+                
+                
+            </div>    
+        </div>
+	</div>
+	<%= render "devise/shared/links" %>
+</div>
