--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,57 +1,58 @@
 
-  <div class="col-md-4 login-col-form_regist">
+  <div class="col-md-8 login-col-form_regist">
     
-         <div class="well well-sm">
+         <div class="well center ">
             <legend><a href="http://www.jquery2dotnet.com"><i class="glyphicon glyphicon-globe"></i></a> Sign up!</legend>
-            <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name) ,:html=> {:class=>"form"}) do |f| %>
+            <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name) ,:html=>{:class=>"form"}) do |f| %>
               <%= devise_error_messages! %>
 
-            <div><%= f.label :avatar,"Image" %><br />
+            <div  class="login_form_regist_items"><%= f.label :avatar,"Image" %>
                 <%= f.file_field :avatar , :class=>"form-control"%>
-                </div>
-            <div class="row">
-                <div class="col-xs-6 col-md-6">
-                  <div><%= f.label :name, "Name" %><br />
+            </div>
+            
+                <div class="login_form_regist_items">
+                  <div><%= f.label :name, "Name" %>
                     <%= f.text_field :name,:id =>"name_sign_up", :class=>"form-control" %>
                      <span id="name_extra" class="textoextra"></span>
                   </div>
                     
                 </div>
-                <div class="col-xs-6 col-md-6">
-                  <div><%= f.label :username, "Username" %><br />
+                <div class="login_form_regist_items">
+                  <div><%= f.label :username, "Username" %>
                         <%= f.text_field :username , :class=>"form-control" %></div>
                    
-                </div>
+                
             </div>
-            <div><%= f.label :city_id, "City" %><br />
+            <div class="login_form_regist_items"><%= f.label :city_id, "City " %>
                <%= f.collection_select(:city_id,@cities,:id,:city, :include_blank => 'Escolha uma opção' , :htlm=>{:class=>"form-control"}) %>
              </div>
-             <div><%= f.label :email %><br />
+             <div class="login_form_regist_items"><%= f.label :email %>
               <%= f.email_field :email, :autofocus => true , :class=>"form-control" %></div>
             
-            <div><%= f.label :password %><br />
+            <div class="login_form_regist_items"><%= f.label :password %>
             <%= f.password_field :password  , :class=>"form-control" %></div>
 
-            <div><%= f.label :password_confirmation %><br />
+            <div class="login_form_regist_items"><%= f.label :password_confirmation %>
             <%= f.password_field :password_confirmation  , :class=>"form-control" %></div>
             
             
-            <label for="">
-                Birth Date</label>
-            <div class="row">
-               <div class="field">
+            
+            
+               <div class="field login_form_regist_items">
                 <%= f.label :birthday %><br />
                 <%= f.text_field :birthday, :label => "Date", :class=> 'datepicker' %>
               </div>
-            </div>
-            <div><%= f.label :phone, "Phone"%><br />
-              <%= f.text_field :phone , :class=>"form-control"  %></div>
-            <br />
-            <br />
-            <div><%= f.submit "Sign up" ,:class=>"btn btn-lg btn-primary btn-block" %></div>
             
+            <div class="login_form_regist_items"><%= f.label :phone, "Phone"%>
+              <%= f.text_field :phone , :class=>"form-control"  %></div>
+          
+            <div class="login_form_regist_items"><%= f.submit "Entrar" ,:class=>"btn btn-lg btn-primary btn-block" %></div>
+
+            <div class='login_form_regist_items'>
+              <%= render "devise/shared/links"  %>
+            </div>
             <% end %>
-            <%= render "devise/shared/links" %>
+            
         </div>
       
  </div>
