[Added Feature]JavaScript Time Ago in words

--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -22,7 +22,7 @@
                     <span class="fa-stack fa-lg">
                       <i class="fa fa-ban fa-stack-2x text-danger"></i>
                     </span>
-                    Danger-Zone
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Danger-Zone
               </a>
             </li>
 
