--- a/app/views/admin/ads/index.html.erb
+++ b/app/views/admin/ads/index.html.erb
@@ -7,7 +7,7 @@
 <section class="panel">
   <header class="panel-heading">
                 All Ads
-    </header>
+  </header>
   <div class="table-responsive">
     <table class="table table-hover" >
       <thead>
@@ -24,6 +24,7 @@
           <th>Type price</th>
           <th>City</th>
           <th>User_ID / User_Name</th>
+          <th>Created_at</th>
           <th></th>
           <th></th>
           <th></th>
@@ -57,12 +58,17 @@
                   </span>
               <% end %>
             </td>
-            <td><%= ad.expire_date %></td>
+            <td><%= l ad.expire_date, :format => :short %></td>
             <td><%= ad.location %></td>
             <td><%= ad.is_active %></td>
             <td><%= ad.type_price_id %></td>
             <td><%= ad.city.city unless ad.city.blank? %></td>
             <td><%= ad.user_id %> / <%= ad.user.name %></td>
+            <td><strong><%= l ad.created_at , :format => :short%></strong> / 
+              <abbr class="timeago" title="<%= ad.created_at.getutc.iso8601 %>"> 
+                <%= ad.created_at.to_s %> 
+              </abbr>
+            </td>
 
             <td><%= link_to 'Show', [:admin,ad] %></td>
             <td><%= link_to 'Edit', edit_admin_ad_path(ad) %></td>
@@ -90,7 +96,6 @@
              </td>
           </tr>
 
-
         <% end %>
       </tbody>
     </table>
@@ -101,4 +106,6 @@
 <%= link_to 'New Ad', new_ad_path %>
                           
 </section>
+
+
 
