--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -6,6 +6,7 @@
         <tr>
           <th>Name</th>
           <th>Description</th>
+          <th>Number of ads</th>
           <th></th>
           <th></th>
           <th></th>
@@ -17,6 +18,7 @@
           <tr>
             <td><%= category.name %></td>
             <td><%= category.description %></td>
+            <td><%= category.ads.count %></td>
             <td><%= link_to 'Show', admin_category_path(category) %></td>
             <td><%= link_to 'Edit', edit_admin_category_path(category) %></td>
             <td><%= link_to 'Destroy', admin_category_path(category), method: :delete, data: { confirm: 'Are you sure?' } %></td>
