--- a/app/views/ratings/show.html.erb
+++ b/app/views/ratings/show.html.erb
@@ -1,30 +1,32 @@
-<%= form_for(@rating) do |f| %>
+<div onload="javascript:alert_function()">
+	<%= form_for(@rating) do |f| %>
 
-	<div class="container">
-		<div class="row">
-			<h2>Rater: <%= @rating.rater.name %> - Rated: <%= @rating.rated.name %><small>Hover and click on a star</small></h2>
+		<div class="container">
+			<div class="row">
+				<h2>Rater: <%= @rating.rater.name %> - Rated: <%= @rating.rated.name %><small>Hover and click on a star</small></h2>
+			</div>
+		    <div class="row lead">
+		        <div id="stars" class="starrr" onclick="javascript:send_rating()"></div>
+		        You gave a rating of <span id="count">0</span> star(s)
+
+			</div>
 		</div>
-	    <div class="row lead">
-	        <div id="stars" class="starrr" onclick="javascript:send_rating()"></div>
-	        You gave a rating of <span id="count">0</span> star(s)
 
-		</div>
-	</div>
+		<div hidden="true">
+			<%= f.label :rate %><br>
+	    	<%= f.text_field :rate %>
+	    </div>
 
-	<div hidden="true">
-		<%= f.label :rate %><br>
-    	<%= f.text_field :rate %>
-    </div>
+		<div id="comment_rating" class="field" hidden="true">
+		  <%= f.label :commet %><br>
+		  <%= f.text_area :comment,:id => "text_comment_rating",:rows=>5,:class=> "form-control counted" ,:placeholder => "Type in your message"%>
+		  <h6 class="pull-right" id="counter">144 characters remaining</h6>
 
-	<div id="comment_rating" class="field" hidden="true">
-	  <%= f.label :commet %><br>
-	  <%= f.text_area :comment,:id => "text_comment_rating",:rows=>5,:class=> "form-control counted" ,:placeholder => "Type in your message"%>
-	  <h6 class="pull-right" id="counter">144 characters remaining</h6>
+		<button class="btn btn-info" type="submit" onclick="javascript:send_rating()">Atribuir Rating</button>
 
-	<button class="btn btn-info" type="submit" onclick="javascript:send_rating()">Atribuir Rating</button>
-
-  	</div>
+	  	</div>
 
 
 
-<% end %>
+	<% end %>
+</div>
