--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -4,7 +4,8 @@
            <% if user_signed_in? %>
                   <%= image_tag current_user.avatar.url:thumb %>
             <% end %>
-           <li><%= link_to "<i class='fa fa-anchor '></i> ADS".html_safe , ads_path %></li>
+              <li><%= link_to "<i class='fa fa-anchor '></i> ADS".html_safe , ads_path %></li>
+              <li><%= link_to "<i class='fa fa-anchor '></i> Your Ads".html_safe , users_myads_path %></li>
               <li><%= link_to "<i class='fa fa-plus '></i> New Ad".html_safe , new_ad_path %></li>
               <li><%= link_to '<i class="fa fa-user "></i> Users'.html_safe , users_path %></li>
               <li>
