--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,11 +16,11 @@
           
 
          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div style="width:100%; position:fixed; top=0; float:right; z-index:-1; " class="collapse navbar-collapse navbar-ex1-collapse">
+          <div class="collapse navbar-collapse navbar-ex1-collapse">
 
             <ul class="nav navbar-nav navbar-right" >
-              <li class="col-lg-6" style="height:50px; line-height:50px; ">
-                <div class="input-group" style="resize:horizontal; float:right;">
+              <li class="col-lg-6">
+                <div class="input-group">
                   <input type="text" class="form-control">
                   <span class="input-group-btn">
                     <button class="btn btn-default" type="button">Pesquisar</button>
