[VIEW UPDATE] changed some text to portuguese and removed others

--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -18,17 +18,17 @@
   </div>
 
   <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title,:placeholder => "Title" %>
+    <%= f.label :title, "Titulo" %><br>
+    <%= f.text_field :title,:placeholder => "Titulo" %>
   </div>
 
   <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_field :description,:placeholder => :description %>
+    <%= f.label :description, "Descrição" %><br>
+    <%= f.text_area :description,:placeholder => "Descrição" %>
   </div>
   <div class="field">
-    <%= f.label :price %><br>
-    <%= f.text_field :price,:placeholder => :price %>
+    <%= f.label :price, "Preço" %><br>
+    <%= f.text_field :price,:placeholder => "Preço" %>
   </div>
 
   <div class="field">
