--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -9,15 +9,12 @@
 <p>
   <strong>Categoria:</strong>
   <% if @ad.category.blank? %>
-    <% if @ad.category.nil? %>
-      <span class="label" style="background-color: #888888">Sem categoria</span>
-    <% else %>
-      <span class="label" style="background-color: #<%= @ad.category.color %>">
-        <%= @ad.category.name %>
-      </span>
-    <% end %>
+    <span class="label" style="background-color: #888888">Sem categoria</span>
+  <% else %>
+    <span class="label" style="background-color: #<%= @ad.category.color %>">
+      <%= @ad.category.name %>
+    </span>
   <% end %>
-
 
 <p>
   <strong>Titulo do anúncio:</strong>
@@ -31,7 +28,7 @@
 
 <p>
   <strong>Preço:</strong>
-  <%= "#{@ad.price} #{@ad.type_price_id}" %>
+  <%= "#{@ad.price} #{@ad.price_type.name}" %>
 </p>
 
 <p>
