--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -113,13 +113,23 @@ footer {
 
 }
 
+
+.main-button-left{
+  width: 80%;
+  margin-top: 2%;
+  text-align: center;
+  margin-left: 10%;
+  text-indent: 0px;
+}
+
 #sidebar-left {
-  background-color: #eaedf1;
+  /*background-color: #eaedf1;*/
   margin-left: -200px;
+  margin-top: 5%;
   left: 200px;
   width: 200px;
   position: fixed;
-  height: 100%;
+  height: 60%;
   overflow-y: auto;
   z-index: 1000;
   transition: all 0.4s ease 0s;
