[Add Feature]Autocomplete SearchBar

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
             <ul class="nav navbar-nav navbar-right" >
               <li class="col-lg-6">
                 <div class="input-group">
-                  <input type="text" class="form-control">
+                  <input type="text" class="form-control typeahead">
                   <span class="input-group-btn">
                     <button class="btn btn-default" type="button">Pesquisar</button>
                   </span>
