--- a/app/views/ads/new.html.erb
+++ b/app/views/ads/new.html.erb
@@ -1,5 +1,15 @@
 <h1>New ad</h1>
 
 <%= render 'form' %>
+<div class="progress progress-striped active">
+    <div class="bar"></div>
+</div>
 
+<script type="text/javascript">
+        $(function() {
+             $( ".progress" ).progressbar({
+                  value: 50
+             });
+        });
+</script>
 <%= link_to 'Back', users_myads_path %>
