--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -393,3 +393,17 @@ width:100%;
 
 #hearts { color: #FF0000;}
 #hearts-existing { color: #87bad7;}
+
+label.valid {
+  width: 24px;
+  height: 24px;
+  background: url('valid.png') center center no-repeat;
+  display: inline-block;
+  text-indent: -9999px;
+}
+label.error {
+  font-weight: bold;
+  color: red;
+  padding: 2px 8px;
+  margin-top: 2px;
+}
