--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,18 +17,20 @@
  */
 
 .icon_rating, .icon_rating-nocolor{
+	position: absolute;
 	background-repeat:no-repeat;
 	background-position: center;
 	display: inline-block;
 	height: 40px;
-	width: 40px;
+	width: 20px;
+
 }
 
 .icon_rating {
 	background-image:url('carrot-image-trim.jpg');
+
 }
 
 .icon_rating-nocolor{
 	background-image:url('carrot-image-nocolor-trim.jpg');
-
 }
