--- a/app/views/ratings/show.html.erb
+++ b/app/views/ratings/show.html.erb
@@ -3,11 +3,12 @@
 
 		<div class="container">
 			<div class="row">
-				<h2>Rater: <%= @rating.rater.name %> - Rated: <%= @rating.rated.name %><small>Hover and click on a star</small></h2>
+				<h2>Rater: <%= @rating.rater.name %> - Rated: <%= @rating.rated.name %></h2>
 			</div>
 		    <div class="row lead">
+		        
+		        You gave a rating of <span id="count">0</span> carrot(s)
 		        <div id="stars" class="starrr" onclick="javascript:send_rating()"></div>
-		        You gave a rating of <span id="count">0</span> star(s)
 
 			</div>
 		</div>
