--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -66,28 +66,22 @@
 
                <!-- MESSAGES -->
               <li class="dropdown messages-dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope-o"></i><span class="badge" id="custom-badge">2</span> <b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope-o"></i><span class="badge" id="custom-badge"><% if @last_message != nil %><%= @last_message.count %><% else %>0<%end%></span> <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li class="dropdown-header">2 New </li>
-                  <li class="preview">
-                    <a href="#">
-                      <span class="avatar"><img src="http://placehold.it/50x50"></span>
-                      <span class="name">John Smith:</span>
-                      <span class="message">Hey there, I wanted to ask you something...</span>
-                      <span class="time"><i class="icon-time"></i> 4:34 PM</span>
-                    </a>
-                  </li>
-                  <li class="divider"></li>
-                  <li class="preview">
-                    <a href="#">
-                      <span class="avatar"><img src="http://placehold.it/50x50"></span>
-                      <span class="name">John Smith:</span>
-                      <span class="message">Hey there, I wanted to ask you something...</span>
-                      <span class="time"><i class="icon-time"></i> 4:34 PM</span>
-                    </a>
-                  </li>
-                  <li class="divider"></li>
-                  <li><a href="#">Ver Mais <span class="badge">2</span></a></li>
+                  <% unless @last_message.nil? %>
+                    <% @last_message.each do |m| %>
+                      <li class="preview">
+                        <a href="#">
+                          <span class="name">Enviado: <%= m.sender.name %></span><br />
+                          <span class="message"><%= truncate(m.text,:length => 20) %></span><br />
+                          <span class="time" align="rigth"><i class="icon-time"></i><small><%= m.created_at %></small></span>
+                        </a>
+                      </li>
+                      <li class="divider"></li>
+                    <%end%>
+                    <li><a href="#">Ver Mais <span class="badge"><%= (@last_message.count - 3) %></span></a></li>
+                  <% end %>
+                  
                 </ul>
               </li>
               <!--END MESSAGES-->
