--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,14 +16,17 @@
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
  
     <ul class="nav navbar-nav navbar-right">
-      <!-- Barra de Pesquisa-->
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group" >
-          <input type="text" class="form-control typeahead" id="omnisearch" placeholder="Pesquisar">
+      
+      <li class="container" id="searchBox" role="search">
+        <div class="input-group" id="input-groupBox">
+          <input type="text" style="vertical-align: center;" class="form-control typeahead">
+          
+          <span class="input-group-btn">
+            <button type="submit" class="btn btn-default" id="omnisearch-btn" >Pesquisar</button>
+          </span>
         </div>
-        <button type="submit" class="btn btn-default" id="omnisearch-btn" >Pesquisar</button>
-      </form>
-    
+      </li>
+
 
       <!-- Lado direito da barra de navegação-->
           
