--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -22,9 +22,9 @@
     <!-- IMAGENS -->
     <% if num_img > 0 %>
       <td>
-        <table class="adImages" align="center">
+        <table class="adImages" align="center" cellpadding="3">
         <tr>
-        <td colspan=2>
+        <td colspan=2 align="center">
         <div id="imageCarousel" class="carousel slide">
           <ol class="carousel-indicators">
 	          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -56,11 +56,11 @@
        <% while (i < (num_img-1)) do %>
          <% if !i.odd? %>
            <tr>
-             <td>
+             <td align="center">
                <%= image_tag @ad.ad_images[i].image(:thumb) %>
              </td>
          <% else %>
-             <td>
+             <td align="center">
                <%= image_tag @ad.ad_images[i].image(:thumb) %>
              </td>
            </tr>
@@ -69,7 +69,7 @@
        <% end %>
        <% if !i.odd? %>
          <tr>
-           <td colspan="2">
+           <td colspan="2" align="center">
              <%= image_tag @ad.ad_images[i].image(:thumb) %>
            </td>
          </tr>
