--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,12 @@
 <nav class="navbar navbar-default navbar-fixed-top" id="navbarAgro" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
+    
+    <img id="agrosocial_logo" src="/assets/logo_button.svg" alt="AgroSocial Logo" class="img-circle">
+    <a class="navbar-brand" id="brandAgro" href="/">AgroSocial</a>
+
+    <a id="menu-toggle" href="#" class="btn btn-default"><i class="fa fa-reorder"></i></a>
+
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
@@ -8,8 +14,6 @@
       <span class="icon-bar"></span>
     </button>
 
-    <img id="agrosocial_logo" src="/assets/logo_button.svg" alt="AgroSocial Logo" class="img-circle">
-    <a class="navbar-brand" id="brandAgro" href="/">AgroSocial</a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
